--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
             <a href="https://www.linkedin.com/in/aniket-iyer" target="_blank" class="mx-3">
                 <img src="images/linkedin.jpg" alt="LinkedIn" class="contact-icon">
             </a>
-            <a href="https://www.instagram.com/realdonaldtrump/" target="_blank" class="mx-3">
+            <a href="https://www.instagram.com/aniket_iyer/" target="_blank" class="mx-3">
                 <img src="images/instagram.png" alt="Instagram" class="contact-icon">
             </a>
-            <a href="https://www.facebook.com/pradeep.khosla" target="_blank" class="mx-3">
+            <a href="https://www.facebook.com/aniketiyer15" target="_blank" class="mx-3">
                 <img src="images/facebook.png" alt="Facebook" class="contact-icon">
             </a>
-            <a href="mailto:aniketiyer19@gmail.com" class="mx-3">
+            <a href="mailto:aniketiyer15@gmail.com" class="mx-3">
                 <img src="images/gmail.jpg" alt="Email" class="contact-icon">
             </a>
         </div>
