--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="COGS 3 Resume.pdf" download>Download</a></li>
+                    <li class="nav-item"><a class="nav-link" href="COGS 3 Resume.pdf" download>Resume</a></li>
                 </ul>
             </div>
         </nav>
