--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">HousePrice Wizard: ML-Driven Real Estate Valuation</h5>
                         <p class="card-text">As entire industries lose stability and the job market becomes a center of chaos, an already concerning housing situation worsens across cities and towns all over California. We wanted to explore how changes in each industry affect the housing market, do the busts and booms of some industries have a different or disproportionate effect than others?. We explored housing prices across 5 different counties: Alameda, San Francisco, Los Angeles, San Diego and Santa Clara between 1990 and 2023 and made predictions for the future.</p>
-                        <a href="https://github.com/COGS108/Group095_WI24/blob/master/FinalProject_Group095_WI24.ipynb" target="_blank" class="btn btn-primary mt-auto">View Project</a>
+                        <a href="https://github.com/aniketiyer15/Housing-Prices-in-California" target="_blank" class="btn btn-primary mt-auto">View Project</a>
                     </div>
                 </div>
             </div>
